deployment/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: "viky-doc-service"
spec:
  selector:
    app.kubernetes.io/name: "viky-doc"
  ports:
    - name: "viky-doc-port"
      port: 80
      protocol: TCP
      targetPort: 80
  sessionAffinity: None
  type: ClusterIP
